Update UI after successful login with welcome message and logout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -827,7 +827,7 @@ async function doLogin() {
       localStorage.setItem('authToken', data.token);
       localStorage.setItem('user', JSON.stringify(data.user));
       showToast('✅ Login realizado com sucesso!');
-      updateAuthUI(data.user);
+      updateAuthUI(data.user.name);
       closeAuth();
     } else {
       // Credenciais inválidas
@@ -839,41 +839,19 @@ async function doLogin() {
   }
 }
 
-function updateAuthUI(user) {
-  const authContainer = document.querySelector('.auth-btn').parentElement;
-  authContainer.innerHTML = `
-    <span style="color: var(--amarelo); font-weight: 700; margin-right: 12px;">Bem vindo ${user.name}!</span>
-    <button class="auth-btn" onclick="logout()" style="background: rgba(255,255,255,0.1); border-color: rgba(255,255,255,0.3);">Sair</button>
-  `;
+function updateAuthUI(userName) {
+  const authBtn = document.querySelector('.auth-btn');
+  if (authBtn) {
+    authBtn.outerHTML = `<span style="color: white; margin-left: 12px; font-weight: 700;">Bem vindo ${userName}</span> <button class="auth-btn" onclick="logout()" style="margin-left: 8px;">Sair</button>`;
+  }
 }
 
 function logout() {
   localStorage.removeItem('authToken');
   localStorage.removeItem('user');
-  const authContainer = document.querySelector('.auth-btn').parentElement;
-  authContainer.innerHTML = `
-    <button class="cart-btn" onclick="toggleCart()">🛒 Carrinho <span class="cart-badge" id="cartBadge">0</span></button>
-    <button class="auth-btn" onclick="openAuth()">Entrar / Cadastrar</button>
-  `;
-  // Re-adicionar event listeners
-  setupModalListeners();
-  // Atualizar badge do carrinho
-  updateCartBadge();
-  showToast('✅ Você foi desconectado');
-}
-
-function checkAuthStatus() {
-  const user = localStorage.getItem('user');
-  if (user) {
-    try {
-      const userData = JSON.parse(user);
-      updateAuthUI(userData);
-    } catch (e) {
-      console.error('Erro ao parsear dados do usuário:', e);
-      localStorage.removeItem('user');
-      localStorage.removeItem('authToken');
-    }
-  }
+  showToast('✅ Logout realizado!');
+  // Recarregar a página para voltar ao estado inicial
+  location.reload();
 }
 
 function protegerPrefixoTelefone(e) {
@@ -1112,7 +1090,16 @@ document.addEventListener('DOMContentLoaded', () => {
   setupModalListeners();
   
   // Verificar se usuário já está logado
-  checkAuthStatus();
+  const user = localStorage.getItem('user');
+  if (user) {
+    try {
+      const userData = JSON.parse(user);
+      updateAuthUI(userData.name);
+    } catch (e) {
+      console.error('Erro ao parsear dados do usuário:', e);
+      localStorage.removeItem('user');
+    }
+  }
   
   renderProducts();
 });
